deploy: e2d73bd8ff18cbcdf1996c29e4aa94cfd1dc4eee

--- a/genindex.html
+++ b/genindex.html
@@ -200,6 +200,10 @@
 </li>
       <li><a href="naps.soc.html#naps.soc.memorymap.MemoryMap.add_alias">add_alias() (naps.soc.memorymap.MemoryMap method)</a>
 </li>
+      <li><a href="naps.soc.html#naps.soc.fatbitstream.FatbitstreamContext.add_cmd_unique">add_cmd_unique() (naps.soc.fatbitstream.FatbitstreamContext method)</a>
+</li>
+      <li><a href="naps.soc.html#naps.soc.fatbitstream.FatbitstreamContext.add_cmds">add_cmds() (naps.soc.fatbitstream.FatbitstreamContext method)</a>
+</li>
       <li><a href="naps.soc.platform.sim.html#naps.soc.platform.sim.sim_soc_platform.SimSocPlatform.add_driver">add_driver() (naps.soc.platform.sim.sim_soc_platform.SimSocPlatform method)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.memorymap.MemoryMap.add_driver_item">add_driver_item() (naps.soc.memorymap.MemoryMap method)</a>
@@ -230,10 +234,10 @@
 </li>
       <li><a href="naps.soc.html#naps.soc.memorymap.MemoryMap.allocate_subrange">allocate_subrange() (naps.soc.memorymap.MemoryMap method)</a>
 </li>
-      <li><a href="naps.cores.axi.html#naps.cores.axi.sim_util.answer_read_burst">answer_read_burst() (in module naps.cores.axi.sim_util)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.cores.axi.html#naps.cores.axi.sim_util.answer_read_burst">answer_read_burst() (in module naps.cores.axi.sim_util)</a>
+</li>
       <li><a href="naps.cores.axi.html#naps.cores.axi.sim_util.answer_write_burst">answer_write_burst() (in module naps.cores.axi.sim_util)</a>
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.PictureAspectRatio.ASPECT_16_9">ASPECT_16_9 (naps.cores.hdmi.InfoFrame.PictureAspectRatio attribute)</a>
@@ -286,6 +290,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.data_structure.html#naps.data_structure.packed_struct_test.DummyStruct.b">b (naps.data_structure.packed_struct_test.DummyStruct attribute)</a>
 </li>
+      <li><a href="naps.soc.html#naps.soc.fatbitstream.CommandPosition.Back">Back (naps.soc.fatbitstream.CommandPosition attribute)</a>
+</li>
       <li><a href="naps.vendor.lattice_ecp5.html#naps.vendor.lattice_ecp5.io.DelayF.backward">backward (naps.vendor.lattice_ecp5.io.DelayF attribute)</a>
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.AviInfoFrame.bar_info">bar_info (naps.cores.hdmi.InfoFrame.AviInfoFrame attribute)</a>
@@ -334,10 +340,10 @@
         <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.Value.bit_start">(naps.soc.pydriver.hardware_proxy.Value attribute)</a>
 </li>
       </ul></li>
-      <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.bitbang_i2c.BitbangI2c">BitbangI2c (class in naps.cores.peripherals.bitbang_i2c)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.bitbang_i2c.BitbangI2c">BitbangI2c (class in naps.cores.peripherals.bitbang_i2c)</a>
+</li>
       <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.bitbang_spi.BitbangSPI">BitbangSPI (class in naps.cores.peripherals.bitbang_spi)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.memorymap.Address.bits_of_word">bits_of_word() (naps.soc.memorymap.Address method)</a>
@@ -462,6 +468,8 @@
 </li>
       <li><a href="naps.util.html#naps.util.sim.SimPlatform.command_templates">command_templates (naps.util.sim.SimPlatform attribute)</a>
 </li>
+      <li><a href="naps.soc.html#naps.soc.fatbitstream.CommandPosition">CommandPosition (class in naps.soc.fatbitstream)</a>
+</li>
       <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.py_compressor.compress">compress() (in module naps.cores.video.wavelet.py_compressor)</a>
 </li>
       <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.py_wavelet.compute_psnr">compute_psnr() (in module naps.cores.video.wavelet.py_wavelet)</a>
@@ -497,8 +505,6 @@
       <li><a href="naps.cores.mipi.dsi_tx.html#naps.cores.mipi.dsi_tx.types.DsiErrorResponse.CONTENTION_DETECTED">CONTENTION_DETECTED (naps.cores.mipi.dsi_tx.types.DsiErrorResponse attribute)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.csr_types.ControlSignal">ControlSignal (class in naps.soc.csr_types)</a>
-</li>
-      <li><a href="naps.soc.html#naps.soc.program_fatbitstream_ssh.copy_ssh">copy_ssh() (in module naps.soc.program_fatbitstream_ssh)</a>
 </li>
       <li><a href="naps.cores.stream.html#naps.cores.stream.counter_source.CounterStreamSource">CounterStreamSource (class in naps.cores.stream.counter_source)</a>
 </li>
@@ -996,10 +1002,10 @@
 </li>
       <li><a href="naps.cores.video.html#naps.cores.video.focus_peeking.FocusPeeking">FocusPeeking (class in naps.cores.video.focus_peeking)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.util.html#naps.util.formal.FormalPlatform">FormalPlatform (class in naps.util.formal)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.stream.html#naps.stream.formal_util_test.FormalUtilTestCase">FormalUtilTestCase (class in naps.stream.formal_util_test)</a>
 </li>
       <li><a href="naps.vendor.lattice_ecp5.html#naps.vendor.lattice_ecp5.io.DelayF.forward">forward (naps.vendor.lattice_ecp5.io.DelayF attribute)</a>
@@ -1011,6 +1017,8 @@
       <li><a href="naps.cores.mipi.csi_rx.html#naps.cores.mipi.csi_rx.types.CsiShortPacketDataType.FRAME_START">FRAME_START (naps.cores.mipi.csi_rx.types.CsiShortPacketDataType attribute)</a>
 </li>
       <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.BitwiseAccessibleInteger.from_list">from_list() (naps.soc.pydriver.hardware_proxy.BitwiseAccessibleInteger static method)</a>
+</li>
+      <li><a href="naps.soc.html#naps.soc.fatbitstream.CommandPosition.Front">Front (naps.soc.fatbitstream.CommandPosition attribute)</a>
 </li>
       <li><a href="naps.cores.debug.html#naps.cores.debug.ila.fsm_probe">fsm_probe() (in module naps.cores.debug.ila)</a>
 </li>
@@ -1809,6 +1817,8 @@
         <li><a href="naps.util.html#module-naps.util">naps.util</a>
 </li>
         <li><a href="naps.util.html#module-naps.util.draw_hierarchy">naps.util.draw_hierarchy</a>
+</li>
+        <li><a href="naps.util.html#module-naps.util.env">naps.util.env</a>
 </li>
         <li><a href="naps.util.html#module-naps.util.formal">naps.util.formal</a>
 </li>
@@ -2719,8 +2729,6 @@
         <li><a href="naps.cores.video.html#module-naps.cores.video.debayer">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.video.debayer_test
 
@@ -2728,6 +2736,8 @@
         <li><a href="naps.cores.video.html#module-naps.cores.video.debayer_test">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.video.demo_source
 
@@ -3275,6 +3285,13 @@
 </li>
       </ul></li>
       <li>
+    naps.util.env
+
+      <ul>
+        <li><a href="naps.util.html#module-naps.util.env">module</a>
+</li>
+      </ul></li>
+      <li>
     naps.util.formal
 
       <ul>
@@ -3491,6 +3508,8 @@
         <li><a href="naps.vendor.xilinx_s7.html#module-naps.vendor.xilinx_s7.ps7">module</a>
 </li>
       </ul></li>
+      <li><a href="naps.util.html#naps.util.env.naps_getenv">naps_getenv() (in module naps.util.env)</a>
+</li>
       <li><a href="naps.util.html#naps.util.nmigen_misc.nAvrg">nAvrg() (in module naps.util.nmigen_misc)</a>
 </li>
       <li><a href="naps.util.html#naps.util.past.NewHere">NewHere() (in module naps.util.past)</a>
@@ -3829,10 +3848,10 @@
 </li>
       <li><a href="naps.cores.video.html#naps.cores.video.debayer.RecoloringDebayerer">RecoloringDebayerer (class in naps.cores.video.debayer)</a>
 </li>
-      <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.csr_bank.CsrBank.reg">reg() (naps.cores.peripherals.csr_bank.CsrBank method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.csr_bank.CsrBank.reg">reg() (naps.cores.peripherals.csr_bank.CsrBank method)</a>
+</li>
       <li><a href="naps.cores.stream.html#naps.cores.stream.repacking.Repack12BitStream">Repack12BitStream (class in naps.cores.stream.repacking)</a>
 </li>
       <li><a href="naps.util.html#naps.util.sim.SimPlatform.request">request() (naps.util.sim.SimPlatform method)</a>
@@ -3880,8 +3899,6 @@
       <li><a href="naps.cores.compression.html#naps.cores.compression.rle_test.RleTest">RleTest (class in naps.cores.compression.rle_test)</a>
 </li>
       <li><a href="naps.util.html#naps.util.past.Rose">Rose() (in module naps.util.past)</a>
-</li>
-      <li><a href="naps.soc.html#naps.soc.program_fatbitstream_ssh.run_ssh">run_ssh() (in module naps.soc.program_fatbitstream_ssh)</a>
 </li>
       <li><a href="naps.cores.ft601.html#naps.cores.ft601.ft601_stream_sink_test.Ft601FakeResource.rxf">rxf (naps.cores.ft601.ft601_stream_sink_test.Ft601FakeResource attribute)</a>
 </li>
@@ -3943,14 +3960,16 @@
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.Colorimetry.SMPTE170_OR_ITU601">SMPTE170_OR_ITU601 (naps.cores.hdmi.InfoFrame.Colorimetry attribute)</a>
 </li>
+      <li><a href="naps.soc.html#naps.soc.soc_platform.soc_platform_name">soc_platform_name() (in module naps.soc.soc_platform)</a>
+</li>
       <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.soc_memory.SocMemory">SocMemory (class in naps.cores.peripherals.soc_memory)</a>
 </li>
       <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.soc_memory_test.SocMemoryTest">SocMemoryTest (class in naps.cores.peripherals.soc_memory_test)</a>
 </li>
-      <li><a href="naps.soc.html#naps.soc.soc_platform.SocPlatform">SocPlatform (class in naps.soc.soc_platform)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.soc.html#naps.soc.soc_platform.SocPlatform">SocPlatform (class in naps.soc.soc_platform)</a>
+</li>
       <li><a href="naps.soc.html#naps.soc.smoke_test.SocSmokeTest">SocSmokeTest (class in naps.soc.smoke_test)</a>
 </li>
       <li><a href="naps.cores.video.html#naps.cores.video.demo_source.SolidColorDemoVideoSource">SolidColorDemoVideoSource() (in module naps.cores.video.demo_source)</a>
