deploy: 73a7fb6dfa0ad07b62a252cc72c46818fa416268

--- a/genindex.html
+++ b/genindex.html
@@ -1401,8 +1401,6 @@
       <ul>
         <li><a href="naps.soc.platform.jtag.html#naps.soc.platform.jtag.memory_accessor_openocd.MemoryAccessor">(in module naps.soc.platform.jtag.memory_accessor_openocd)</a>
 </li>
-        <li><a href="naps.soc.platform.zynq.html#naps.soc.platform.zynq.memory_accessor_devmem.MemoryAccessor">(in module naps.soc.platform.zynq.memory_accessor_devmem)</a>
-</li>
       </ul></li>
       <li><a href="naps.soc.html#naps.soc.memorymap.MemoryMap">MemoryMap (class in naps.soc.memorymap)</a>
 </li>
@@ -3774,12 +3772,12 @@
 </li>
       <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.generate.pydriver_hook">pydriver_hook() (in module naps.soc.pydriver.generate)</a>
 </li>
-      <li><a href="naps.soc.platform.jtag.html#naps.soc.platform.jtag.jtag_soc_platform.JTAGSocPlatform.pydriver_memory_accessor">pydriver_memory_accessor (naps.soc.platform.jtag.jtag_soc_platform.JTAGSocPlatform attribute)</a>
+      <li><a href="naps.soc.platform.jtag.html#naps.soc.platform.jtag.jtag_soc_platform.JTAGSocPlatform.pydriver_memory_accessor">pydriver_memory_accessor() (naps.soc.platform.jtag.jtag_soc_platform.JTAGSocPlatform method)</a>
 
       <ul>
-        <li><a href="naps.soc.platform.sim.html#naps.soc.platform.sim.sim_soc_platform.SimSocPlatform.pydriver_memory_accessor">(naps.soc.platform.sim.sim_soc_platform.SimSocPlatform attribute)</a>
+        <li><a href="naps.soc.platform.sim.html#naps.soc.platform.sim.sim_soc_platform.SimSocPlatform.pydriver_memory_accessor">(naps.soc.platform.sim.sim_soc_platform.SimSocPlatform method)</a>
 </li>
-        <li><a href="naps.soc.platform.zynq.html#naps.soc.platform.zynq.zynq_soc_platform.ZynqSocPlatform.pydriver_memory_accessor">(naps.soc.platform.zynq.zynq_soc_platform.ZynqSocPlatform attribute)</a>
+        <li><a href="naps.soc.platform.zynq.html#naps.soc.platform.zynq.zynq_soc_platform.ZynqSocPlatform.pydriver_memory_accessor">(naps.soc.platform.zynq.zynq_soc_platform.ZynqSocPlatform method)</a>
 </li>
       </ul></li>
   </ul></td>
