deploy: 96edee4163e386cb4ae0e51f8af7fcc45c2e9a34

--- a/genindex.html
+++ b/genindex.html
@@ -334,6 +334,8 @@
         <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.Value.bit_len">(naps.soc.pydriver.hardware_proxy.Value attribute)</a>
 </li>
       </ul></li>
+      <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.Value.bit_mask">bit_mask (naps.soc.pydriver.hardware_proxy.Value attribute)</a>
+</li>
       <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.Blob.bit_start">bit_start (naps.soc.pydriver.hardware_proxy.Blob attribute)</a>
 
       <ul>
@@ -1002,10 +1004,10 @@
 </li>
       <li><a href="naps.cores.video.html#naps.cores.video.focus_peeking.FocusPeeking">FocusPeeking (class in naps.cores.video.focus_peeking)</a>
 </li>
-      <li><a href="naps.util.html#naps.util.formal.FormalPlatform">FormalPlatform (class in naps.util.formal)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="naps.util.html#naps.util.formal.FormalPlatform">FormalPlatform (class in naps.util.formal)</a>
+</li>
       <li><a href="naps.stream.html#naps.stream.formal_util_test.FormalUtilTestCase">FormalUtilTestCase (class in naps.stream.formal_util_test)</a>
 </li>
       <li><a href="naps.vendor.lattice_ecp5.html#naps.vendor.lattice_ecp5.io.DelayF.forward">forward (naps.vendor.lattice_ecp5.io.DelayF attribute)</a>
@@ -1015,8 +1017,6 @@
       <li><a href="naps.cores.mipi.csi_rx.html#naps.cores.mipi.csi_rx.types.CsiShortPacketDataType.FRAME_END">FRAME_END (naps.cores.mipi.csi_rx.types.CsiShortPacketDataType attribute)</a>
 </li>
       <li><a href="naps.cores.mipi.csi_rx.html#naps.cores.mipi.csi_rx.types.CsiShortPacketDataType.FRAME_START">FRAME_START (naps.cores.mipi.csi_rx.types.CsiShortPacketDataType attribute)</a>
-</li>
-      <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.BitwiseAccessibleInteger.from_list">from_list() (naps.soc.pydriver.hardware_proxy.BitwiseAccessibleInteger static method)</a>
 </li>
       <li><a href="naps.soc.html#naps.soc.fatbitstream.CommandPosition.Front">Front (naps.soc.fatbitstream.CommandPosition attribute)</a>
 </li>
@@ -4491,6 +4491,8 @@
       <li><a href="naps.util.html#naps.util.nmigen_misc.with_reset">with_reset() (in module naps.util.nmigen_misc)</a>
 </li>
       <li><a href="naps.soc.platform.zynq.html#naps.soc.platform.zynq.memory_accessor_devmem.DevMemAccessor.word">word (naps.soc.platform.zynq.memory_accessor_devmem.DevMemAccessor attribute)</a>
+</li>
+      <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.Value.word_aligned_inverse_bit_mask">word_aligned_inverse_bit_mask (naps.soc.pydriver.hardware_proxy.Value attribute)</a>
 </li>
       <li><a href="naps.cores.mipi.html#naps.cores.mipi.common.PacketHeader.word_count">word_count (naps.cores.mipi.common.PacketHeader attribute)</a>
 </li>
