deploy: f4082ef46e34596cf397bd3fc78ccb1b0c47c52d

--- a/genindex.html
+++ b/genindex.html
@@ -3846,6 +3846,8 @@
 </li>
       <li><a href="naps.cores.cmv12k.html#naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi.read_reg">read_reg (naps.cores.cmv12k.cmv12k_spi.Cmv12kSpi attribute)</a>
 </li>
+      <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.Value.readable">readable (naps.soc.pydriver.hardware_proxy.Value attribute)</a>
+</li>
       <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.py_wavelet_repack.real_width">real_width() (in module naps.cores.video.wavelet.py_wavelet_repack)</a>
 </li>
       <li><a href="naps.cores.video.html#naps.cores.video.debayer.RecoloringDebayerer">RecoloringDebayerer (class in naps.cores.video.debayer)</a>
@@ -4504,11 +4506,13 @@
 </li>
       <li><a href="naps.cores.mipi.html#naps.cores.mipi.common.PacketHeader.word_count">word_count (naps.cores.mipi.common.PacketHeader attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.cores.axi.html#naps.cores.axi.axi_endpoint.AxiBurstType.WRAP">WRAP (naps.cores.axi.axi_endpoint.AxiBurstType attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.cores.video.wavelet.html#naps.cores.video.wavelet.py_wavelet_benchmark.wrapper">wrapper() (in module naps.cores.video.wavelet.py_wavelet_benchmark)</a>
+</li>
+      <li><a href="naps.soc.pydriver.html#naps.soc.pydriver.hardware_proxy.Value.writable">writable (naps.soc.pydriver.hardware_proxy.Value attribute)</a>
 </li>
       <li><a href="naps.cores.ft601.html#naps.cores.ft601.ft601_stream_sink_test.Ft601FakeResource.write">write (naps.cores.ft601.ft601_stream_sink_test.Ft601FakeResource attribute)</a>
 </li>
