deploy: 33d840602692d3ae57dfac8a3aa0e0695cf63ac1

--- a/genindex.html
+++ b/genindex.html
@@ -318,6 +318,8 @@
 </li>
       <li><a href="naps.cores.ft601.html#naps.cores.ft601.ft601_stream_sink_test.Ft601FakeResource.be">be (naps.cores.ft601.ft601_stream_sink_test.Ft601FakeResource attribute)</a>
 </li>
+      <li><a href="naps.soc.html#naps.soc.fatbitstream.CommandPosition.BeforeBitstream">BeforeBitstream (naps.soc.fatbitstream.CommandPosition attribute)</a>
+</li>
       <li><a href="naps.cores.video.html#naps.cores.video.demo_source.BertlDemoVideoSource">BertlDemoVideoSource() (in module naps.cores.video.demo_source)</a>
 </li>
       <li><a href="naps.cores.hdmi.tx.html#naps.cores.hdmi.tx.pattern_generator.BertlPatternGenerator">BertlPatternGenerator (class in naps.cores.hdmi.tx.pattern_generator)</a>
