--- a/genindex.html
+++ b/genindex.html
@@ -4208,10 +4208,10 @@
         <li><a href="naps.cores.compression.html#naps.cores.compression.rle_test.RleTest.test_output_stream_properties">(naps.cores.compression.rle_test.RleTest method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.cores.video.html#naps.cores.video.gamma_corrector_test.GammaCorrectorTest.test_output_table_gamma_corrector_decode">test_output_table_gamma_corrector_decode() (naps.cores.video.gamma_corrector_test.GammaCorrectorTest method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.cores.video.html#naps.cores.video.gamma_corrector_test.GammaCorrectorTest.test_output_table_gamma_corrector_encode">test_output_table_gamma_corrector_encode() (naps.cores.video.gamma_corrector_test.GammaCorrectorTest method)</a>
 </li>
       <li><a href="naps.cores.video.html#naps.cores.video.gamma_corrector_test.GammaCorrectorTest.test_output_table_gamma_corrector_nop">test_output_table_gamma_corrector_nop() (naps.cores.video.gamma_corrector_test.GammaCorrectorTest method)</a>
@@ -4261,6 +4261,8 @@
       <li><a href="naps.cores.video.html#naps.cores.video.image_convoluter_test.VideoTransformerTest.test_shift_1y_positive_transformer">test_shift_1y_positive_transformer() (naps.cores.video.image_convoluter_test.VideoTransformerTest method)</a>
 </li>
       <li><a href="naps.cores.stream.html#naps.cores.stream.fifo_test.TestFifo.test_sim_async_stream_fifo">test_sim_async_stream_fifo() (naps.cores.stream.fifo_test.TestFifo method)</a>
+</li>
+      <li><a href="naps.cores.stream.html#naps.cores.stream.gearbox_test.TestSimpleGearbox.test_simple_gearbox_384_to_64_last">test_simple_gearbox_384_to_64_last() (naps.cores.stream.gearbox_test.TestSimpleGearbox method)</a>
 </li>
       <li><a href="naps.cores.stream.html#naps.cores.stream.gearbox_test.TestSimpleGearbox.test_simple_gearbox_48_to_12_last">test_simple_gearbox_48_to_12_last() (naps.cores.stream.gearbox_test.TestSimpleGearbox method)</a>
 </li>
