deploy: 67259eea3712d7ef02030e3b14e896286a495cc8

--- a/genindex.html
+++ b/genindex.html
@@ -1672,6 +1672,8 @@
 </li>
         <li><a href="naps.util.html#module-naps.util.amaranth_misc_test">naps.util.amaranth_misc_test</a>
 </li>
+        <li><a href="naps.util.html#module-naps.util.amaranth_private">naps.util.amaranth_private</a>
+</li>
         <li><a href="naps.util.html#module-naps.util.draw_hierarchy">naps.util.draw_hierarchy</a>
 </li>
         <li><a href="naps.util.html#module-naps.util.env">naps.util.env</a>
@@ -2533,8 +2535,6 @@
         <li><a href="naps.cores.stream.html#module-naps.cores.stream.tee">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.stream.tee_test
 
@@ -2542,6 +2542,8 @@
         <li><a href="naps.cores.stream.html#module-naps.cores.stream.tee_test">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     naps.cores.video
 
@@ -3058,6 +3060,13 @@
 
       <ul>
         <li><a href="naps.util.html#module-naps.util.amaranth_misc_test">module</a>
+</li>
+      </ul></li>
+      <li>
+    naps.util.amaranth_private
+
+      <ul>
+        <li><a href="naps.util.html#module-naps.util.amaranth_private">module</a>
 </li>
       </ul></li>
       <li>
