--- a/genindex.html
+++ b/genindex.html
@@ -334,6 +334,14 @@
       </ul></li>
       <li><a href="naps.util.html#naps.util.python_misc.camel_to_snake">camel_to_snake() (in module naps.util.python_misc)</a>
 </li>
+      <li><a href="naps.soc.platform.jtag.html#naps.soc.platform.jtag.jtag_soc_platform.JTAGSocPlatform.can_wrap">can_wrap() (naps.soc.platform.jtag.jtag_soc_platform.JTAGSocPlatform static method)</a>
+
+      <ul>
+        <li><a href="naps.soc.platform.sim.html#naps.soc.platform.sim.sim_soc_platform.SimSocPlatform.can_wrap">(naps.soc.platform.sim.sim_soc_platform.SimSocPlatform static method)</a>
+</li>
+        <li><a href="naps.soc.platform.zynq.html#naps.soc.platform.zynq.zynq_soc_platform.ZynqSocPlatform.can_wrap">(naps.soc.platform.zynq.zynq_soc_platform.ZynqSocPlatform static method)</a>
+</li>
+      </ul></li>
       <li><a href="naps.util.html#naps.util.past.Changed">Changed() (in module naps.util.past)</a>
 </li>
       <li><a href="naps.cores.peripherals.html#naps.cores.peripherals.csr_bank_zynq_test.TestAxiSlave.check_csr_bank">check_csr_bank() (naps.cores.peripherals.csr_bank_zynq_test.TestAxiSlave method)</a>
@@ -378,12 +386,12 @@
 </li>
       <li><a href="naps.cores.mipi.dsi_tx.html#naps.cores.mipi.dsi_tx.types.DsiShortPacketDataType.COLOR_MODE_OFF">COLOR_MODE_OFF (naps.cores.mipi.dsi_tx.types.DsiShortPacketDataType attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.cores.mipi.dsi_tx.html#naps.cores.mipi.dsi_tx.types.DsiShortPacketDataType.COLOR_MODE_ON">COLOR_MODE_ON (naps.cores.mipi.dsi_tx.types.DsiShortPacketDataType attribute)</a>
 </li>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.Colorimetry">Colorimetry (class in naps.cores.hdmi.InfoFrame)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="naps.cores.hdmi.html#naps.cores.hdmi.InfoFrame.AviInfoFrame.colorimetry">colorimetry (naps.cores.hdmi.InfoFrame.AviInfoFrame attribute)</a>
 </li>
       <li><a href="naps.platform.html#naps.platform.colorlight_5a_75b_7_0.Colorlight5a75b70Platform">Colorlight5a75b70Platform (class in naps.platform.colorlight_5a_75b_7_0)</a>
